fixing message spacing - 2

--- a/frontend/src/components/Message/Message.scss
+++ b/frontend/src/components/Message/Message.scss
@@ -1,8 +1,7 @@
 .Message {
     display: block;
     background-color: white;
-    margin: 10 auto;
-    margin-bottom: 1vh;
+    margin: 0.7vh;
     box-shadow: 0 5px 15px -5px rgba(0, 0, 0, 0.1);
     padding: 10px 20px;
     border-radius: 5px;
